k8s-cluster-configuration/applications/excalidraw/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: excalidraw-gateway
  namespace: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "excalidraw.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: excalidraw.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: excalidraw-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: excalidraw-gateway
      namespace: excalidraw
  hostnames:
    - excalidraw.k6nis.dev
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: excalidraw
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
